<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/bgcolor"
    tools:context=".activity.forgot.ForgotActivity">

    <include layout="@layout/base_title"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_45"
        android:layout_marginTop="@dimen/dp_5"
        android:paddingLeft="@dimen/dp_15"
        android:paddingRight="@dimen/dp_15"
        android:background="@color/white"
        android:gravity="center_vertical">

        <TextView
            android:text="@string/username"
            style="@style/textGrey3Style14"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <EditText
            android:id="@+id/etUserName"
            style="@style/textGrey3Style14"
            android:hint="@string/input_username"
            android:textColorHint="@color/hintColor"
            android:background="@null"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_35" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_45"
        android:layout_marginTop="@dimen/dp_1"
        android:gravity="center_vertical"
        android:background="@color/white"
        android:paddingLeft="@dimen/dp_15"
        android:paddingRight="@dimen/dp_15">

        <TextView
            android:text="@string/code"
            style="@style/textGrey3Style14"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <EditText
            android:id="@+id/etCode"
            style="@style/textGrey3Style14"
            android:hint="@string/input_password"
            android:textColorHint="@color/hintColor"
            android:background="@null"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="@dimen/dp_35" />

        <View
            android:layout_width="@dimen/dp_1"
            android:layout_height="@dimen/dp_35"
            android:background="@color/grey9"/>

        <TextView
            android:id="@+id/tvGetCode"
            style="@style/textGrey3Style14"
            android:layout_marginLeft="@dimen/dp_10"
            android:layout_marginRight="@dimen/dp_10"
            android:gravity="center"
            android:text="@string/get_code"
            android:layout_width="@dimen/dp_80"
            android:layout_height="@dimen/dp_35" />

    </LinearLayout>

    <TextView
        android:id="@+id/tvNext"
        style="@style/textWhiteStyle14"
        android:background="@drawable/bg_greyd8"
        android:gravity="center"
        android:text="@string/next"
        android:layout_marginTop="@dimen/dp_30"
        android:layout_marginLeft="@dimen/dp_15"
        android:layout_marginRight="@dimen/dp_15"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_45" />

</LinearLayout>