<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/bgcolor"
    tools:context=".activity.setpwd.SetPwdActivity">

    <include layout="@layout/base_title"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_45"
        android:gravity="center_vertical"
        android:background="@color/white"
        android:layout_marginTop="@dimen/dp_5"
        android:paddingLeft="@dimen/dp_10"
        android:paddingRight="@dimen/dp_10">

        <TextView
            android:text="@string/new_pwd"
            style="@style/textGrey3Style14"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <EditText
            android:id="@+id/etNewPwd"
            style="@style/textGrey3Style14"
            android:hint="@string/input_pwd"
            android:inputType="textPassword"
            android:background="@null"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_35" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_45"
        android:background="@color/white"
        android:layout_marginTop="@dimen/dp_1"
        android:paddingLeft="@dimen/dp_10"
        android:paddingRight="@dimen/dp_10">

        <TextView
            android:text="@string/new_pwd_again"
            style="@style/textGrey3Style14"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <EditText
            android:id="@+id/etPwdAgain"
            style="@style/textGrey3Style14"
            android:hint="@string/input_pwd_again"
            android:inputType="textPassword"
            android:background="@null"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_35" />

    </LinearLayout>

    <TextView
        android:id="@+id/tvNext"
        style="@style/textWhiteStyle14"
        android:background="@drawable/bg_orange"
        android:gravity="center"
        android:text="@string/reset_pwd"
        android:layout_marginTop="@dimen/dp_40"
        android:layout_marginLeft="@dimen/dp_10"
        android:layout_marginRight="@dimen/dp_10"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_45" />

</LinearLayout>