<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/bgcolor"
    tools:context=".activity.info.StoreInfoActivity">

    <include layout="@layout/base_title"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:text="@string/store_tips"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/dp_10"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="@color/white">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="@dimen/dp_10">

                    <TextView
                        style="@style/textGrey3Style14"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="店主身份证(*必填)" />

                    <TextView
                        android:text="@string/identify_one"
                        style="@style/textGrey9Style12"
                        android:layout_marginTop="@dimen/dp_20"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                    <TextView
                        android:text="@string/identify_two"
                        style="@style/textGrey9Style12"
                        android:layout_marginTop="@dimen/dp_10"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@mipmap/iv_front"/>

                        <ImageView
                            android:id="@+id/ivIdentifyPhoto"
                            android:layout_width="@dimen/dp_100"
                            android:layout_height="@dimen/dp_100"
                            android:scaleType="centerCrop"
                            android:layout_marginLeft="@dimen/dp_15"
                            android:layout_marginRight="@dimen/dp_80"
                            android:src="@mipmap/iv_add_apply"/>

                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp_1"
                    android:orientation="vertical"
                    android:padding="@dimen/dp_10">

                    <TextView
                        style="@style/textGrey3Style14"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="营业执照(*必填)" />

                    <TextView
                        android:text="@string/identify_phone_one"
                        style="@style/textGrey9Style12"
                        android:layout_marginTop="@dimen/dp_20"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                    <TextView
                        android:text="@string/identify_phone_two"
                        style="@style/textGrey9Style12"
                        android:layout_marginTop="@dimen/dp_10"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@mipmap/iv_licence" />

                        <ImageView
                            android:id="@+id/ivBusinessLicence"
                            android:layout_width="@dimen/dp_100"
                            android:layout_height="@dimen/dp_100"
                            android:scaleType="centerCrop"
                            android:layout_marginLeft="@dimen/dp_15"
                            android:layout_marginRight="@dimen/dp_80"
                            android:src="@mipmap/iv_add_apply" />

                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginTop="@dimen/dp_1"
                    android:padding="@dimen/dp_10">

                    <TextView
                        android:text="@string/identify_allow"
                        style="@style/textGrey3Style14"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                    <TextView
                        android:text="@string/identify_allow_one"
                        style="@style/textGrey9Style12"
                        android:layout_marginTop="@dimen/dp_20"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                    <TextView
                        android:text="@string/identify_allow_two"
                        style="@style/textGrey9Style12"
                        android:layout_marginTop="@dimen/dp_10"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@mipmap/iv_allow" />

                        <ImageView
                            android:id="@+id/ivAllow"
                            android:layout_width="@dimen/dp_100"
                            android:layout_height="@dimen/dp_100"
                            android:scaleType="centerCrop"
                            android:layout_marginLeft="@dimen/dp_15"
                            android:layout_marginRight="@dimen/dp_80"
                            android:src="@mipmap/iv_add_apply" />

                    </LinearLayout>

                </LinearLayout>

                <TextView
                    android:id="@+id/tvNext"
                    style="@style/textWhiteStyle14"
                    android:background="@drawable/bg_orange"
                    android:gravity="center"
                    android:text="@string/next"
                    android:layout_marginTop="@dimen/dp_40"
                    android:layout_marginLeft="@dimen/dp_10"
                    android:layout_marginRight="@dimen/dp_10"
                    android:layout_marginBottom="@dimen/dp_10"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dp_45" />

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</LinearLayout>