<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    tools:context=".activity.apply.ApplyActivity">

    <include layout="@layout/base_title"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingLeft="@dimen/dp_30"
            android:paddingRight="@dimen/dp_30"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <com.superpeer.tutuyoudian.widget.CircleImageView
                android:id="@+id/ivLogo"
                android:layout_width="@dimen/dp_80"
                android:layout_height="@dimen/dp_80"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/dp_50"
                android:src="@mipmap/iv_tutu"/>

            <TextView
                style="@style/textPrimaryStyle18"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_20"
                android:gravity="center"
                android:text="兔兔优店专属跑腿\n店主招募中……" />

            <EditText
                android:id="@+id/etPhone"
                style="@style/textGrey3Style12"
                android:inputType="phone"
                android:hint="@string/input_phone"
                android:background="@null"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_40"
                android:layout_marginTop="@dimen/dp_30"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_1"
                android:background="@color/greyD8"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:layout_marginTop="@dimen/dp_10"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/etCode"
                    style="@style/textGrey3Style12"
                    android:inputType="number"
                    android:hint="@string/input_code"
                    android:background="@null"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="@dimen/dp_40"/>

                <TextView
                    android:id="@+id/tvGetCode"
                    style="@style/textPrimaryStyle13"
                    android:text="@string/get_code"
                    android:background="@null"
                    android:gravity="right"
                    android:padding="@dimen/dp_10"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_1"
                android:background="@color/greyD8"/>

            <EditText
                android:id="@+id/etPwd"
                style="@style/textGrey3Style12"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_40"
                android:layout_marginTop="@dimen/dp_10"
                android:background="@null"
                android:hint="@string/input_pwd"
                android:inputType="textPassword" />

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_1"
                android:background="@color/greyD8"/>

            <EditText
                android:id="@+id/etRepeatPwd"
                style="@style/textGrey3Style12"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_40"
                android:layout_marginTop="@dimen/dp_10"
                android:background="@null"
                android:hint="@string/repeat_pwd"
                android:inputType="textPassword" />

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_1"
                android:background="@color/greyD8"/>

            <LinearLayout
                android:id="@+id/linearAgree"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:padding="@dimen/dp_10">

                <ImageView
                    android:id="@+id/ivAgree"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@mipmap/iv_noagree"/>

                <TextView
                    android:text="我已阅读并同意"
                    style="@style/textGrey9Style12"
                    android:layout_marginLeft="@dimen/dp_10"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/tvAgree"
                    style="@style/textYellowStyle12"
                    android:text="《兔兔优店跑腿服务协议》"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

            </LinearLayout>

            <TextView
                android:id="@+id/tvNext"
                android:text="注册"
                android:gravity="center"
                android:layout_marginTop="@dimen/dp_30"
                android:layout_marginBottom="@dimen/dp_30"
                style="@style/textWhiteStyle14"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_45"
                android:background="@drawable/bg_orange"/>

        </LinearLayout>

    </ScrollView>

</LinearLayout>